[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "termgrid"
version = "0.1.0"
description = "Simple terminal grid rendering library"
authors = [
    {name = "JustMedansh"}
]
dependencies = [
    "termcolor"
]
requires-python = ">=3.8"
license = {text = "MIT"}
[tool.setuptools.packages.find]
where = ["."]